# ai-tutorials

./: CREDITS.md  README.md
AI Planning/: Introducción a CSP.ipynb  sudoku.txt
AI Planning/Introducción a CSP/: Introducción a CSP.ipynb
Deep Learning/: Ejemplo Básico NNRegressor con Pytorch.ipynb  Ejemplo Básico con Gender Classification con Pytorch .ipynb  Pytorch _ Ejemplo Básico NNClassifier  README.md
Deep Learning/Ejemplo Básico NNClassifier con Pytorch/: Ejemplo Básico NNClassifier con Pytorch .ipynb
Distributed AI/: ACO TSP 2023-C3  CW VRP  Clases & Lectura de grafos  Genetic Knapsack  Genetic Purchase  VRP con COPK-Means.ipynb
Distributed AI/DIST AI Federated Learning/Flwr Quickstart/: README.md  pyproject.toml
Distributed AI/DIST AI Federated Learning/Flwr Quickstart/test/: __init__.py  server_app.py
Distributed AI/DIST AI Genetic Purchase/: GeneticPurchase.py  Genetic_Purchase.ipynb  (+7 more)
Intelligent Games/: MINIMAX Cero Mata Cero  Presidente Minimax Apha-Beta IDS_
Machine Learning/: 02 - Sistema de recomendación_ Filtrado colaborativo basado en items  EJEMPLO Intermedio _ Clasificación  EJEMPLO Intermedio _ Regresión  EJEMPLO _ Importancia de características  Ejemplo Básico de Clasificación.ipynb  README.md  Sistema de recomendación con Filtrado colaborativo basado en usuarios.ipynb
NLP/: Lab_3_fine_tune_model_to_detoxify_summaries.ipynb  README.md  Text Score Predictor _ Básico
Python Basics/: Introducción a Pandas.ipynb  Introducción a Python.ipynb  Introducción a la Programación en Python _ BASE_  MatplotLib (Tarde)  NumPy (Tarde)
(+67 files in other folders)
